[gd_scene load_steps=6 format=2]

[ext_resource path="res://assests/BlackBox.png" type="Texture" id=1]
[ext_resource path="res://Object/MoveBox.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 27 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -30.0139, -30.0534, 29.7438, -30.0534, 29.7438, 29.7042, -29.8652, 30.0015 )

[node name="MoveBox" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.152941, 0.0745098, 0.14902, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="StaticBody2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )
[connection signal="body_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_body_entered"]
[connection signal="body_exited" from="StaticBody2D" to="." method="_on_StaticBody2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
